--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-localization": "^1.0.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^0.88.2"
